# ArchVNDE

./: .gitattributes  .gitignore  Cargo.toml  install.sh  noti.sh  re-install.sh  run.sh  start.sh  update.sh
.workspace/: git_workflow.md
configs/: README.md
configs/dolphin/: ArchVNDE.colors  dolphin.qss  dolphinrc  kdeglobals
crates/archvnde-dock/: Cargo.toml  main.rs
crates/archvnde-dock/src/: config.rs  main.rs  monitor.rs  ui.rs
crates/archvnde-dock/src/models/: mod.rs
crates/archvnde-dock/src/widgets/: item.rs  mod.rs  popovers.rs
crates/archvnde-island/: Cargo.toml
crates/archvnde-island/src/: lib.rs  player_loop.rs  playerctl.rs
crates/archvnde-island/src/widgets/: notification.rs  popover.rs  visualizer.rs
crates/archvnde-lock/: Cargo.toml
crates/archvnde-lock/src/: main.rs  pam.rs  render.rs
crates/archvnde-lock/src/widgets/: mod.rs
crates/archvnde-menu/: Cargo.toml  main.rs
crates/archvnde-menu/src/: main.rs  render.rs  ui.rs
crates/archvnde-menu/src/widgets/: actions.rs  events.rs  item.rs  mod.rs  position.rs
crates/archvnde-notification/: Cargo.toml
crates/archvnde-notification/src/: main.rs
crates/archvnde-notification/src/services/: mod.rs
crates/archvnde-notification/src/ui/: mod.rs
crates/archvnde-panel/: Cargo.toml  main.rs
crates/archvnde-panel/src/: main.rs  render.rs  workspace.rs
crates/archvnde-panel/src/widgets/: clock.rs  mod.rs  quick_settings.rs  sys_monitor.rs  tray.rs  workspace.rs
crates/archvnde-panel/src/widgets/clock/: calendar_window.rs  mod.rs  notifications.rs  render.rs
crates/archvnde-panel/src/widgets/notch/: mod.rs  player_loop.rs  playerctl.rs
crates/archvnde-panel/src/widgets/panel/: mod.rs  power_actions.rs  render.rs  sliders.rs  storage.rs  toggle_grid.rs
crates/archvnde-panel/src/widgets/panel/items/: mod.rs
crates/archvnde-panel/src/widgets/panel/items/backlight/: mod.rs  render.rs
crates/archvnde-panel/src/widgets/panel/items/bluetooth/: render.rs
crates/archvnde-panel/src/widgets/panel/items/darkmode/: render.rs
crates/archvnde-panel/src/widgets/panel/items/power/: render.rs
crates/archvnde-panel/src/widgets/panel/items/storage/: mod.rs  render.rs
crates/archvnde-panel/src/widgets/panel/items/volume/: mod.rs  render.rs
crates/archvnde-panel/src/widgets/panel/items/wifi/: mod.rs  render.rs
crates/archvnde-panel/src/widgets/power/: mod.rs  restart.rs  shutdown.rs
crates/archvnde-panel/src/widgets/quick_settings/: mod.rs  power_actions.rs  sliders.rs  toggle_grid.rs
crates/archvnde-panel/src/widgets/sys_monitor/: mod.rs  render.rs
crates/archvnde-panel/src/widgets/tray/: mod.rs  render.rs
crates/archvnde-panel/src/widgets/workspace/: apps.rs  mod.rs  preview.rs  render.rs
crates/archvnde-screenshot/: Cargo.toml
crates/archvnde-screenshot/src/: capture.rs  editor.rs  main.rs  render.rs
crates/archvnde-screenshot/src/widgets/: editor.rs  mod.rs
libs/archvnde-common/: Cargo.toml  lib.rs
libs/archvnde-common/src/: config.rs  desktop.rs  island.rs  lib.rs  style.css  theme.rs  window.rs
libs/archvnde-common/src/animation/: css_genie.rs  css_zoom.rs  easing.rs  fade.rs  genie.rs  island.rs  mod.rs  slide.rs  zoom.rs
libs/archvnde-common/src/core/: config.rs  desktop.rs  mod.rs  power.rs
libs/archvnde-common/src/icon/: mod.rs
libs/archvnde-common/src/island/: mod.rs
libs/archvnde-common/src/models/: dock_config.rs  island_state.rs  mod.rs  pinned_app.rs  shell_config.rs  theme_config.rs
libs/archvnde-common/src/styles/: button.css  calendar.css  dock.css  launcher.css  menu.css  notification.css  panel.css  power.css  quick_settings.css
libs/archvnde-common/src/theme/: mod.rs
libs/archvnde-common/src/theme/styles/: bar.css  calendar.css  clock.css  control_center.css  launcher.css  notification.css  quick_settings.css  screenshot.css  switcher.css  system_island.css  taskbar.css  workspaces.css
libs/archvnde-common/src/theme/styles/dark/: calendar.css  control_center.css  launcher.css  lock.css  menu.css  notification.css  panel.css  screenshot.css  status.css  switcher.css  sys_monitor.css  taskbar.css  tray.css  workspaces.css
libs/archvnde-common/src/theme/styles/light/: button.css  calendar.css  clock.css  control_center.css  launcher.css  lock.css  menu.css  notification.css  panel.css  power.css  screenshot.css  status.css  switcher.css  sys_monitor.css  system_island.css  taskbar.css  tray.css  workspaces.css
libs/archvnde-common/src/window/: mod.rs
src/: config.rs  config_watcher.rs  main.rs  state.rs
(+124 files in other folders)
