[workspace]
resolver = "2"
members = [
    "libs/archvnde-common",
    "crates/archvnde-panel",
    "libs/archvnde-launcher",
    "libs/archvnde-island",
    "libs/archvnde-wallpaper",
    "crates/archvnde-menu",
    "crates/archvnde-switcher",
    "crates/archvnde-screenshot",
    "crates/archvnde-lock",
]

