[workspace]
resolver = "2"
members = [
    "libs/archvnde-common",
    "libs/archvnde-i18n",
    "libs/archvnde-tray",
    "crates/archvnde-panel",
    "crates/archvnde-launcher",
    "libs/archvnde-island",
    "libs/archvnde-wallpaper",
    "crates/archvnde-menu",
    "crates/archvnde-switcher",
]

