[workspace]
resolver = "2"
members = [
    "libs/archvnde-common",
    "libs/archvnde-i18n",
    "libs/archvnde-tray",
    "crates/archvnde-panel",
    "libs/archvnde-launcher",
    "libs/archvnde-island",
    "libs/archvnde-wallpaper",
    "crates/archvnde-menu",
    "crates/archvnde-switcher",
    "crates/archvnde-screenshot",
    "crates/archvnde-lock",
]

