[package]
name = "archvnde-menu"
version = "0.1.0"
edition = "2021"



[dependencies]
archvnde-common = { path = "../archvnde-common" }
archvnde-wallpaper = { path = "../archvnde-wallpaper" }

# GUI & Layer Shell
gtk4 = { version = "0.9", features = ["v4_10"] }
gtk4-layer-shell = "0.4.0"
glib = "0.20"
gio = "0.20"
