[package]
name = "archvnde-screenshot"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", package = "gtk4" }
gtk4-layer-shell = "0.4"
cairo-rs = { version = "0.20", features = ["use_glib", "png"] }
gdk-pixbuf = "0.20"
glib = "0.20"
gio = "0.20"
dirs = "5.0"
chrono = "0.4"
archvnde-common = { path = "../../libs/archvnde-common" }
