[package]
name = "archvnde-common"
version = "0.1.0"
edition = "2021"



[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
archvnde-i18n = { path = "../archvnde-i18n" }

# GTK4 for theme provider support
gtk4 = { version = "0.9", features = ["v4_10"] }
gtk4-layer-shell = "0.4.0"
glib = "0.20"
gio = "0.20"
gdk-pixbuf = "0.20"
gdk4 = "0.9"
dirs = "5.0"
serde_json = "1.0"

